[package]
name = "axum_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.6"
axum-server = { version = "0.7.1", features = ["openssl", "tls-openssl", "tls-rustls"] }
openssl = "0.10.66"
rustls = "0.23.13"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
# rustls-extra = "0.15.0"
tokio = { version = "1.40.0", features = ["full"] }
